--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^5.1.2",
     "element-ui": "^2.15.2",
     "less": "^3.9",
     "less-loader": "^5.0.0",
