--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "echarts": "^5.1.2",
     "element-ui": "^2.15.2",
     "less": "^3.9",
     "less-loader": "^5.0.0",
+    "maptalks": "^1.0.0-beta.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
